tests/ui/shadowing.gopp
package main
func main() {
    x := 1
    x := 2 //~ ERROR x redeclared in this scope
    println(x)
}
